--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -111,10 +111,17 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Fira Code
+    # family: Roboto Mono
+    # family: Code New Roman
+    # family: Fira Code Light
+    # family: Hack
+    # family: Ubuntu Mono
+    family: Terminess TTF Nerd Font
+    # family: Mononoki
+    # family: monofur
 
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Regular
 
   # Bold font face
   #bold:
@@ -150,7 +157,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  #size: 11.0
+  size: 13.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
