--- a/stows/alacritty/.config/alacritty/alacritty.yml
+++ b/stows/alacritty/.config/alacritty/alacritty.yml
@@ -46,8 +46,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 5
-    y: 5
+    x: 10
+    y: 10
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -116,7 +116,7 @@ font:
     # family: Fira Code Light
     # family: Hack
     # family: Ubuntu Mono
-    family: Terminess TTF Nerd Font
+    family: Fira Code
     # family: Mononoki
     # family: monofur
 
@@ -346,7 +346,7 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.8
+window_opacity: 0.8
 
 selection:
   # This string contains all characters that are used as separators for
