--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -14,11 +14,14 @@ monitor = ,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
+exec-once = swayidle -w timeout 600 /home/witek/.dotfiles/scripts/lock-and-suspend
 exec-once = waybar
+exec-once = nm-applet
 exec-once = hyprpaper
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = alacritty
-exec-once = swayidle -w timeout 600 /home/witek/.dotfiles/scripts/lock-and-suspend
+exec-once = nextcloud
+exec-once = dropbox
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
