--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -17,9 +17,10 @@ monitor = ,preferred,auto,auto
 exec-once = swayidle -w timeout 600 /home/witek/.dotfiles/scripts/lock-and-suspend
 exec-once = waybar
 exec-once = nm-applet
+exec-once = swaync
 exec-once = hyprpaper
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = alacritty
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = alacritty -e bashtop
 exec-once = nextcloud
 exec-once = dropbox
 
