--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ env = GTK_THEME,Adwaita-dark
 
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
+monitor = eDP-1,3456x2160@60,0x0,2
 monitor = ,preferred,auto,auto
 
 
@@ -135,7 +136,7 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-bind = ,XF86ScreenSaver, exec,~/.dotfiles/scripts/lock-and-suspend
+bind = ,XF86ScreenSaver, exec,/home/witek/.dotfiles/scripts/lock-and-suspend
 bindl = ,XF86AudioMute, exec,pulseaudio-ctl mute
 bindle = ,XF86AudioRaiseVolume, exec,pulseaudio-ctl up
 bindle = ,XF86AudioLowerVolume, exec,pulseaudio-ctl down
