[hyprland] babashka config

--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ env = GTK_THEME,Adwaita-dark
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,3456x2160@60,0x0,2
+monitor = LVDS-1,1920x1080@60,0x0,1
 monitor = ,preferred,auto,auto
 
 
