--- a/stows/hypr/.config/hypr/hyprpaper.conf
+++ b/stows/hypr/.config/hypr/hyprpaper.conf
@@ -14,7 +14,7 @@
 #preload = /home/witek/Pictures/wallpapers/24:10/laser_beams-wallpaper-3840x1600.jpg
 #wallpaper = ,/home/witek/Pictures/wallpapers/24:10/laser_beams-wallpaper-3840x1600.jpg
 
-preload = /home/witek/Pictures/wallpapers/24:10/1063235.jpg
-wallpaper = ,/home/witek/Pictures/wallpapers/24:10/1063235.jpg
+preload = /home/witek/Pictures/wallpapers/current.jpg
+wallpaper = ,/home/witek/Pictures/wallpapers/current.jpg
 
 
