--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ input {
     kb_layout = de
     kb_variant = nodeadkeys
     kb_model =
-    kb_options =
+    kb_options = caps:swapescape
     kb_rules =
 
     follow_mouse = 1
@@ -55,7 +55,7 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(ffcc33ee) rgba(0099ffee) 45deg
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
