--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ input {
     kb_layout = de
     kb_variant = nodeadkeys
     kb_model =
-    kb_options = caps:swapescape
+    kb_options = caps:escape
     kb_rules =
 
     follow_mouse = 1
