[hyprland] nextclound in background

--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ exec-once = swaync
 exec-once = hyprpaper
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = alacritty -e bashtop
-exec-once = nextcloud
+exec-once = nextcloud --background
 exec-once = dropbox
 
 # Source a file (multi-file configs)
