--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -118,6 +118,8 @@ gestures {
 }
 
 misc {
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
      #new_window_takes_over_fullscreen = 2
 }
 
