--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -19,6 +19,7 @@ monitor = ,preferred,auto,auto
 exec-once = swayidle -w timeout 600 /home/witek/.dotfiles/scripts/lock-and-suspend
 exec-once = waybar
 exec-once = nm-applet
+exec-once = udiskie
 exec-once = swaync
 exec-once = hyprpaper
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
