--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -110,7 +110,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    #_new_is_master = true
 }
 
 gestures {
@@ -130,7 +130,8 @@ binds {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
+device {
+    name = epic-mouse-v1 
     sensitivity = -0.5
 }
 
@@ -171,7 +172,7 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 bind = $mainMod SHIFT, L, movefocus, r
 bind = $mainMod SHIFT, H, movefocus, l
-b
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
