--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -121,7 +121,9 @@ gestures {
 misc {
     mouse_move_enables_dpms = true
     key_press_enables_dpms = true
-     #new_window_takes_over_fullscreen = 2
+    #new_window_takes_over_fullscreen = 2
+    force_default_wallpaper = -1
+    disable_hyprland_logo = false
 }
 
 binds {
