--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -1,11 +1,42 @@
 #
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
+# https://wiki.hyprland.org/Configuring
 #
 
+
+#  ___ _  ___   __
+# | __| \| \ \ / /
+# | _|| .` |\ V /
+# |___|_|\_| \_/
+
 env = PATH,~/.dotfiles/scripts:$PATH
+
+
+#     _        _       __       _   _
+#  __| |_ _  _| |___  / _|___  | |_| |_  ___ _ __  ___
+# (_-<  _| || | / -_) > _|_ _| |  _| ' \/ -_) '  \/ -_)
+# /__/\__|\_, |_\___| \_____|   \__|_||_\___|_|_|_\___|
+#         |__/
+
 env = GTK_THEME,Adwaita-dark
 
+
+#  _             _                             _
+# | |__  __ _ __| |____ _ _ _ ___ _  _ _ _  __| |
+# | '_ \/ _` / _| / / _` | '_/ _ \ || | ' \/ _` |
+# |_.__/\__,_\__|_\_\__, |_| \___/\_,_|_||_\__,_|
+#                   |___/
+
+exec-once = hyprpaper
+misc {
+    disable_hyprland_logo = false
+    disable_splash_rendering = false
+    force_default_wallpaper = -1
+}
+
+#                 _ _
+#  _ __  ___ _ _ (_) |_ ___ _ _ ___
+# | '  \/ _ \ ' \| |  _/ _ \ '_(_-<
+# |_|_|_\___/_||_|_|\__\___/_| /__/
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,3456x2160@60,0x0,2
@@ -16,16 +47,13 @@ monitor = ,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = swayidle -w timeout 600 /home/witek/.dotfiles/scripts/lock-and-suspend
+exec-once = swayidle -w timeout 2400 /home/witek/.dotfiles/scripts/lock-and-suspend
 exec-once = waybar
 exec-once = nm-applet
 exec-once = udiskie
 exec-once = swaync
-exec-once = hyprpaper
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = alacritty -e bashtop
-exec-once = nextcloud --background
-exec-once = dropbox
+# exec-once = systemctl --user start hyprpolkitagent
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -41,7 +69,7 @@ input {
     kb_options = caps:escape
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     touchpad {
         natural_scroll = no
@@ -56,30 +84,33 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = rgba(ffcc33ee) rgba(0099ffee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border =  rgba(aaaaffee) rgba(00ff00ee) rgba(ffcc33ee) rgba(ff0000ee) 45deg
+    col.inactive_border = rgba(595959ff)
 
     layout = dwindle
 
     resize_on_border = yes
+    # extend_border_grab_area = 25
+    hover_icon_on_border = true
+
+    snap {
+        enabled = yes
+        window_gap = 50
+    }
 
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    # https://wiki.hyprland.org/Configuring/Variables/
 
-    rounding = 10
+    rounding = 15
+    rounding_power = 2.0
 
     blur {
         enabled = true
         size = 3
         passes = 1
     }
-
-    drop_shadow = yes
-    shadow_range = 10
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 
     dim_inactive = no
     dim_strength = 0.1
@@ -119,11 +150,10 @@ gestures {
 }
 
 misc {
-    mouse_move_enables_dpms = true
-    key_press_enables_dpms = true
+    mouse_move_enables_dpms = yes
+    key_press_enables_dpms = yes
     #new_window_takes_over_fullscreen = 2
-    force_default_wallpaper = -1
-    disable_hyprland_logo = false
+    focus_on_activate = yes
 }
 
 binds {
@@ -144,23 +174,25 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 bind = ,XF86ScreenSaver, exec,/home/witek/.dotfiles/scripts/lock-and-suspend
-bindl = ,XF86AudioMute, exec,pulseaudio-ctl mute
-bindle = ,XF86AudioRaiseVolume, exec,pulseaudio-ctl up
-bindle = ,XF86AudioLowerVolume, exec,pulseaudio-ctl down
+bindl = ,XF86AudioMute, exec,wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindle = ,XF86AudioRaiseVolume, exec,wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 10%+
+bindle = ,XF86AudioLowerVolume, exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 10%-
+bindle = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
+bindle = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-bindr = SUPER, SUPER_L, exec, ~/.dotfiles/scripts/my-rofi
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec,alacritty
+bind = $mainMod, T, exec,gnome-terminal
 bind = $mainMod, X, killactive,
-bind = $mainMod, Q, exit,
+bind = $mainMod, ESC, exit,
+bind = $mainMod, BACKSPACE, exec, /home/witek/.dotfiles/scripts/lock-and-suspend
 bind = $mainMod, F, exec, nautilus
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, S, togglesplit, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, minus, togglesplit, # dwindle
 
 
 # Move focus with mainMod + arrow keys
@@ -174,6 +206,7 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 bind = $mainMod SHIFT, L, movefocus, r
 bind = $mainMod SHIFT, H, movefocus, l
+bind = $mainMod, SPACE, cyclenext
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -207,6 +240,7 @@ bind = $mainMod ALT, J, movewindow, d
 
 # Resize active window
 bind = $mainMod ALT, udiaeresis, resizeactive, 10% 10%
+bind = $mainMod ALT, plus, resizeactive, 10% 10%
 bind = $mainMod ALT, minus, resizeactive, -10% -10%
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
@@ -231,11 +265,119 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Window Rules
 
-#windowrulev2 = float, class:(Alacritty)
-#windowrulev2 = size 200 2000, class:(Alacritty)
-#windowrulev2 = pseudo, class:(Alacritty)
-#windowrulev2 = tile, class:(Alacritty)
-
 #windowrulev2 = maxsize 200 200, class:(whatsapp-desktop-linux)
 
 #windowrulev2 = float, class:(firefox)
+
+
+#                  _      _
+#  ____ __  ___ __(_)__ _| |
+# (_-< '_ \/ -_) _| / _` | |
+# /__/ .__/\___\__|_\__,_|_|
+#    |_|
+
+decoration {
+    dim_special = 0.5
+}
+
+bind = $mainMod, i, togglespecialworkspace, i
+bind = $mainMod, p, togglespecialworkspace, p
+bind = $mainMod, d, togglespecialworkspace, d
+bind = $mainMod, m, togglespecialworkspace, m
+
+
+#  ___  ___  ___ ___
+# | _ \/ _ \| __|_ _|
+# |   / (_) | _| | |
+# |_|_\\___/|_| |___|
+
+# application launcher
+
+# bindr = SUPER, SUPER_L, exec, ~/.dotfiles/scripts/my-rofi
+# bind = $mainMod, space, exec, ~/.dotfiles/scripts/my-rofi
+bind = $mainMod, return, exec, ~/.dotfiles/scripts/my-rofi
+
+
+#     _ _
+#  __| (_)_ __ ___ ___
+# / _| | | '_ (_-</ -_)
+# \__|_|_| .__/__/\___|
+#        |_|
+
+# clipboard manager
+
+exec-once = clipse -listen
+# bind = $mainMod, C, exec, gnome-terminal --class clipse -- clipse
+bind = $mainMod, C, exec, alacritty --class clipse -e clipse
+windowrule = float, class:(clipse)
+windowrule = size 800 800, class:(clipse)
+windowrule = stayfocused, class:(clipse)
+
+
+#  ___
+# | __|_ __  __ _ __ ___
+# | _|| '  \/ _` / _(_-<
+# |___|_|_|_\__,_\__/__/
+
+exec-once = /home/witek/.dotfiles/scripts/emacs-server
+bind = $mainMod, E, exec, emacsclient -c -a ""
+
+
+#               _      _             _
+#  _ _  _____ _| |_ __| |___ _  _ __| |
+# | ' \/ -_) \ /  _/ _| / _ \ || / _` |
+# |_||_\___/_\_\\__\__|_\___/\_,_\__,_|
+
+exec-once = nextcloud --background
+
+#     _              _
+#  __| |_ _ ___ _ __| |__  _____ __
+# / _` | '_/ _ \ '_ \ '_ \/ _ \ \ /
+# \__,_|_| \___/ .__/_.__/\___/_\_\
+#              |_|
+
+exec-once = dropbox
+
+
+#  _             _   _
+# | |__  __ _ __| |_| |_ ___ _ __
+# | '_ \/ _` (_-< ' \  _/ _ \ '_ \
+# |_.__/\__,_/__/_||_\__\___/ .__/
+#                           |_|
+
+exec-once = [workspace 1] alacritty -e bashtop
+
+
+#  ___ _          __
+# | __(_)_ _ ___ / _|_____ __
+# | _|| | '_/ -_)  _/ _ \ \ /
+# |_| |_|_| \___|_| \___/_\_\
+
+exec-once = [workspace 6 silent] firefox
+
+
+#   ___ _
+#  / __| |_  _ _ ___ _ __  ___
+# | (__| ' \| '_/ _ \ '  \/ -_)
+#  \___|_||_|_| \___/_|_|_\___|
+
+exec-once = [workspace 7 silent] /home/witek/.dotfiles/scripts/chrome-witek
+# exec-once = [workspace 8 silent] /home/witek/.dotfiles/scripts/chrome-witek
+
+
+#  ___ _                _
+# / __(_)__ _ _ _  __ _| |
+# \__ \ / _` | ' \/ _` | |
+# |___/_\__, |_||_\__,_|_|
+#       |___/
+
+exec-once = [workspace 5 silent] signal-desktop
+
+# __      ___         _        _
+# \ \    / / |_  __ _| |_ ___ /_\  _ __ _ __
+#  \ \/\/ /| ' \/ _` |  _(_-</ _ \| '_ \ '_ \
+#   \_/\_/ |_||_\__,_|\__/__/_/ \_\ .__/ .__/
+#                                 |_|  |_|
+
+exec-once = [workspace 5 silent] elecwhat
+
