--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -319,7 +319,8 @@ windowrule = stayfocused, class:(clipse)
 # | _|| '  \/ _` / _(_-<
 # |___|_|_|_\__,_\__/__/
 
-exec-once = /home/witek/.dotfiles/scripts/emacs-server
+# exec-once = /home/witek/.dotfiles/scripts/emacs-server
+exec-once = [workspace 8 silent] emacs
 bind = $mainMod, E, exec, emacsclient -c -a ""
 
 
@@ -345,7 +346,7 @@ exec-once = dropbox
 # |_.__/\__,_/__/_||_\__\___/ .__/
 #                           |_|
 
-exec-once = [workspace 1] alacritty -e bashtop
+exec-once = [workspace 1 silent] alacritty -e bashtop
 
 
 #  ___ _          __
