--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -280,10 +280,10 @@ decoration {
     dim_special = 0.5
 }
 
-bind = $mainMod, i, togglespecialworkspace, i
+#bind = $mainMod, i, togglespecialworkspace, i
 bind = $mainMod, p, togglespecialworkspace, p
-bind = $mainMod, d, togglespecialworkspace, d
-bind = $mainMod, m, togglespecialworkspace, m
+#bind = $mainMod, d, togglespecialworkspace, d
+#bind = $mainMod, m, togglespecialworkspace, m
 
 
 #  ___  ___  ___ ___
@@ -322,6 +322,11 @@ windowrule = stayfocused, class:(clipse)
 # exec-once = /home/witek/.dotfiles/scripts/emacs-server
 exec-once = [workspace 8 silent] emacs
 bind = $mainMod, E, exec, emacsclient -c -a ""
+
+bind = $mainMod, I, exec, emacsclient --eval '(tinee)' -a ''
+windowrule = float, class:(tinee)
+windowrulev2 = float, title:(tinee)
+
 
 
 #               _      _             _
