--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -28,9 +28,9 @@ env = GTK_THEME,Adwaita-dark
 
 exec-once = hyprpaper
 misc {
-    disable_hyprland_logo = false
-    disable_splash_rendering = false
-    force_default_wallpaper = -1
+    #disable_hyprland_logo = false
+    #disable_splash_rendering = false
+    #force_default_wallpaper = -1
 }
 
 #                 _ _
@@ -146,7 +146,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    # workspace_swipe = off
 }
 
 misc {
@@ -321,10 +321,9 @@ windowrule = stayfocused, class:(clipse)
 
 # exec-once = /home/witek/.dotfiles/scripts/emacs-server
 exec-once = [workspace 8 silent] emacs
-bind = $mainMod, E, exec, emacsclient -c -a ""
+bind = $mainMod, E, exec, emacsclient -c
 
-bind = $mainMod, I, exec, emacsclient --eval '(tinee)' -a ''
-windowrule = float, class:(tinee)
+bind = $mainMod, I, exec, emacsclient --eval '(tinee)'
 windowrulev2 = float, title:(tinee)
 
 
@@ -385,5 +384,6 @@ exec-once = [workspace 5 silent] signal-desktop
 #   \_/\_/ |_||_\__,_|\__/__/_/ \_\ .__/ .__/
 #                                 |_|  |_|
 
-exec-once = [workspace 5 silent] elecwhat
+# exec-once = [workspace 5 silent] elecwhat
+exec-once = [workspace 5 silent] flatpak run com.ktechpit.whatsie
 
