--- a/stows/hypr/.config/hypr/hyprpaper.conf
+++ b/stows/hypr/.config/hypr/hyprpaper.conf
@@ -14,7 +14,12 @@
 #preload = /home/witek/Pictures/wallpapers/24:10/laser_beams-wallpaper-3840x1600.jpg
 #wallpaper = ,/home/witek/Pictures/wallpapers/24:10/laser_beams-wallpaper-3840x1600.jpg
 
-preload = /home/witek/Pictures/wallpapers/current.jpg
-wallpaper = ,/home/witek/Pictures/wallpapers/current.jpg
+# preload = /home/witek/Pictures/wallpapers/current.jpg
+# wallpaper = ,/home/witek/Pictures/wallpapers/current.jpg
 
+wallpaper {
+  monitor = eDP-1
+  path = /home/witek/Pictures/wallpapers/current.jpg
+  fit_mode = cover
+}
 
