--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -242,6 +242,7 @@ bind = $mainMod ALT, J, movewindow, d
 bind = $mainMod ALT, udiaeresis, resizeactive, 10% 10%
 bind = $mainMod ALT, plus, resizeactive, 10% 10%
 bind = $mainMod ALT, minus, resizeactive, -10% -10%
+bind = $mainMod, O, fullscreen, 0
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod ALT, 1, movetoworkspace, 1
@@ -309,9 +310,9 @@ bind = $mainMod, return, exec, ~/.dotfiles/scripts/my-rofi
 exec-once = clipse -listen
 # bind = $mainMod, C, exec, gnome-terminal --class clipse -- clipse
 bind = $mainMod, C, exec, alacritty --class clipse -e clipse
-windowrule = float, class:(clipse)
-windowrule = size 800 800, class:(clipse)
-windowrule = stayfocused, class:(clipse)
+#windowrule = float, class:(clipse)
+#windowrule = size 800 800, class:(clipse)
+#windowrule = stayfocused, class:(clipse)
 
 
 #  ___
