[hyprland] Integrate focusing with Emacs

--- a/stows/hypr/.config/hypr/hyprland.conf
+++ b/stows/hypr/.config/hypr/hyprland.conf
@@ -196,14 +196,21 @@ bind = $mainMod, minus, togglesplit, # dwindle
 
 
 # Move focus with mainMod + arrow keys
+
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, J, movefocus, d
+
+# bind = $mainMod, H, movefocus, l
+bind = $mainMod, H, exec, ~/.dotfiles/scripts/hypr-focus-left
+# bind = $mainMod, L, movefocus, r
+bind = $mainMod, L, exec, ~/.dotfiles/scripts/hypr-focus-right
+# bind = $mainMod, K, movefocus, u
+bind = $mainMod, K, exec, ~/.dotfiles/scripts/hypr-focus-up
+# bind = $mainMod, J, movefocus, d
+bind = $mainMod, J, exec, ~/.dotfiles/scripts/hypr-focus-down
+
 bind = $mainMod SHIFT, L, movefocus, r
 bind = $mainMod SHIFT, H, movefocus, l
 bind = $mainMod, SPACE, cyclenext
